mainfests/overlays/dev/patch-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30091
