mainfests/overlays/dev/patch-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30081
